# climlab-emanuel-convection

./: .gitignore  README.md  meson.build  pyproject.toml  setup.py
.github/workflows/: build-and-test.yml
ci/: requirements-linux.yml  requirements-macos-arm64.yml  requirements-macos.yml  requirements-windows.yml
climlab_emanuel_convection/: Driver.f90  __init__.py  convect.f  dry_adjustment.f  meson.build  setup.py
climlab_emanuel_convection/tests/: meson.build  test_emanuel_convection.py
